--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -64,10 +64,12 @@
 #products {
     background: transparent;
     justify-content: center;
+
     display: grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: 300px 300px 300px 300px;
     grid-gap: 10px;
     padding: 10px;
+
 }
 
 header {
@@ -91,6 +93,7 @@ header {
 
 body {
     background-color: powderblue;
+
 }
 
 #bt-register #bt-login {
@@ -109,3 +112,43 @@ body {
     color: white;
 }
 
+.my-navbar{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    height: 100%; /* Full height */
+    position: absolute; /* Make it stick, even on scroll */
+    overflow: auto; /* Enable scrolling if the sidenav has too much content */
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+.container {
+    margin: 0;
+    padding: 0;
+}
+
+.grid-container {
+    position: relative;
+    width: 600px;
+    margin-left: 30%;
+    left: 20%;
+}
+
+/*.footer {*/
+/*    position: relative;*/
+/*}*/
+   
