--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -31,12 +31,13 @@
             <tbody>
 
             <tr>
-              <td class="p-4">
+              <td class="p-4" th:each="prodC,iterStat : ${cartProduct}">
+<!--                  th:each="prod,iterStat : ${products}-->
                 <div class="media align-items-center">
 <!--                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">-->
                   <img src="/static/img/avatar1_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">
                   <div class="media-body">
-                    <a href="#" class="d-block text-dark">Product 1</a>
+                    <a href="#" class="d-block text-dark" th:text="${proC}">Product 1</a>
                     <small>
                       <span class="text-muted">Color:</span>
                       <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span> &nbsp;
@@ -52,46 +53,46 @@
               <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>
             </tr>
 
-            <tr>
-              <td class="p-4">
-                <div class="media align-items-center">
-<!--                  <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">-->
-                    <img src="/static/img/avatar6_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">
-                  <div class="media-body">
-                    <a href="#" class="d-block text-dark">Product 2</a>
-                    <small>
-                      <span class="text-muted">Color:</span>
-                      <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#000;"></span> &nbsp;
-                      <span class="text-muted">Storage: </span> 32GB &nbsp;
-                      <span class="text-muted">Warranty: </span> Standard - 1 year &nbsp;
-                      <span class="text-muted">Ships from: </span> China
-                    </small>
-                  </div>
-                </div>
-              </td>
-              <td class="text-right font-weight-semibold align-middle p-4">$1049.00</td>
-              <td class="align-middle p-4"><input type="text" class="form-control text-center" value="1"></td>
-              <td class="text-right font-weight-semibold align-middle p-4">$1049.00</td>
-              <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>
-            </tr>
+<!--            <tr>-->
+<!--              <td class="p-4">-->
+<!--                <div class="media align-items-center">-->
+<!--&lt;!&ndash;                  <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">&ndash;&gt;-->
+<!--                    <img src="/static/img/avatar6_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">-->
+<!--                  <div class="media-body">-->
+<!--                    <a href="#" class="d-block text-dark">Product 2</a>-->
+<!--                    <small>-->
+<!--                      <span class="text-muted">Color:</span>-->
+<!--                      <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#000;"></span> &nbsp;-->
+<!--                      <span class="text-muted">Storage: </span> 32GB &nbsp;-->
+<!--                      <span class="text-muted">Warranty: </span> Standard - 1 year &nbsp;-->
+<!--                      <span class="text-muted">Ships from: </span> China-->
+<!--                    </small>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </td>-->
+<!--              <td class="text-right font-weight-semibold align-middle p-4">$1049.00</td>-->
+<!--              <td class="align-middle p-4"><input type="text" class="form-control text-center" value="1"></td>-->
+<!--              <td class="text-right font-weight-semibold align-middle p-4">$1049.00</td>-->
+<!--              <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>-->
+<!--            </tr>-->
 
-            <tr>
-              <td class="p-4">
-                <div class="media align-items-center">
-                  <img src="/static/img/avatar2_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">
-                  <div class="media-body">
-                    <a href="#" class="d-block text-dark">Product 3</a>
-                    <small>
-                      <span class="text-muted">Ships from: </span> Germany
-                    </small>
-                  </div>
-                </div>
-              </td>
-              <td class="text-right font-weight-semibold align-middle p-4">$20.55</td>
-              <td class="align-middle p-4"><input type="text" class="form-control text-center" value="1"></td>
-              <td class="text-right font-weight-semibold align-middle p-4">$20.55</td>
-              <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>
-            </tr>
+<!--            <tr>-->
+<!--              <td class="p-4">-->
+<!--                <div class="media align-items-center">-->
+<!--                  <img src="/static/img/avatar2_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">-->
+<!--                  <div class="media-body">-->
+<!--                    <a href="#" class="d-block text-dark">Product 3</a>-->
+<!--                    <small>-->
+<!--                      <span class="text-muted">Ships from: </span> Germany-->
+<!--                    </small>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </td>-->
+<!--              <td class="text-right font-weight-semibold align-middle p-4">$20.55</td>-->
+<!--              <td class="align-middle p-4"><input type="text" class="form-control text-center" value="1"></td>-->
+<!--              <td class="text-right font-weight-semibold align-middle p-4">$20.55</td>-->
+<!--              <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>-->
+<!--            </tr>-->
 
             </tbody>
           </table>
