--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+
+
 <head>
     <meta charset="UTF-8">
     <title>Cart</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
 
 </head>
 
@@ -30,28 +33,29 @@
             </thead>
             <tbody>
 
-            <tr>
-              <td class="p-4" th:each="prodC,iterStat : ${cartProduct}">
-<!--                  th:each="prod,iterStat : ${products}-->
-                <div class="media align-items-center">
-<!--                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">-->
-                  <img src="/static/img/avatar1_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">
-                  <div class="media-body">
-                    <a href="#" class="d-block text-dark" th:text="${proC}">Product 1</a>
-                    <small>
-                      <span class="text-muted">Color:</span>
-                      <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span> &nbsp;
-                      <span class="text-muted">Size: </span> EU 37 &nbsp;
-                      <span class="text-muted">Ships from: </span> China
-                    </small>
-                  </div>
+                <div class="table_cart" th:each="prodC,iterStat : ${cartProduct}">
+                    <tr >
+                      <td class="p-4">
+                        <div class="media align-items-center">
+                        <!--<img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">-->
+                          <img src="/static/img/avatar1_copy.png" class="d-block ui-w-40 ui-bordered mr-4" alt="">
+                          <div class="media-body">
+                            <a href="#" class="d-block text-dark" th:text="${prodC.name}">Product 1</a>
+                            <small>
+                              <span class="text-muted">Color:</span>
+                              <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span> &nbsp;
+                              <span class="text-muted">Size: </span> EU 37 &nbsp;
+                              <span class="text-muted">Ships from: </span> China
+                            </small>
+                          </div>
+                        </div>
+                      </td>
+                      <td class="text-right font-weight-semibold align-middle p-4">$57.55</td>
+                      <td class="align-middle p-4"><input type="text" class="form-control text-center" value="2"></td>
+                      <td class="text-right font-weight-semibold align-middle p-4">$115.1</td>
+                      <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>
+                    </tr>
                 </div>
-              </td>
-              <td class="text-right font-weight-semibold align-middle p-4">$57.55</td>
-              <td class="align-middle p-4"><input type="text" class="form-control text-center" value="2"></td>
-              <td class="text-right font-weight-semibold align-middle p-4">$115.1</td>
-              <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>
-            </tr>
 
 <!--            <tr>-->
 <!--              <td class="p-4">-->
