wip after solving display cart and start to change list to hashmap in cart dao

--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -43,15 +43,15 @@
                           <div class="media-body">
                             <a href="#" class="d-block text-dark" th:text="${prodC.name}">Product 1</a>
                             <small>
-                              <span class="text-muted">Color:</span>
-                              <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span> &nbsp;
-                              <span class="text-muted">Size: </span> EU 37 &nbsp;
-                              <span class="text-muted">Ships from: </span> China
+                              <span class="text-muted" th:text="${prodC.description}">Color:</span>
+<!--                              <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span> &nbsp;-->
+<!--                              <span class="text-muted">Size: </span> EU 37 &nbsp;-->
+<!--                              <span class="text-muted">Ships from: </span> China-->
                             </small>
                           </div>
                         </div>
                       </td>
-                      <td class="text-right font-weight-semibold align-middle p-4">$57.55</td>
+                      <td class="text-right font-weight-semibold align-middle p-4" th:text="${#numbers.formatDecimal(prodC.getDefaultPrice(), 1, 'DEFAULT', 2, 'DEFAULT') +' '+ prodC.getDefaultCurrency}">$57.55</td>
                       <td class="align-middle p-4"><input type="text" class="form-control text-center" value="2"></td>
                       <td class="text-right font-weight-semibold align-middle p-4">$115.1</td>
                       <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">X</a></td>
