--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -113,17 +113,18 @@ body {
 }
 
 .my-navbar{
-    list-style-type: none;
+    height: 100%; /* Full height */
+    width: 200px;
+    position: absolute;
+    z-index: 1;
     margin: 0;
     padding: 0;
-    width: 200px;
+    list-style-type: none;
     background-color: #f1f1f1;
-    height: 100%; /* Full height */
-    position: absolute; /* Make it stick, even on scroll */
-    overflow: auto; /* Enable scrolling if the sidenav has too much content */
+    overflow-x: hidden;
 }
 
-li a {
+.my-navbar a, .dropdown-btn {
     display: block;
     color: #000;
     padding: 8px 16px;
@@ -131,9 +132,30 @@ li a {
 }
 
 /* Change the link color on hover */
-li a:hover {
+.my-navbar a:hover, .dropdown-btn:hover {
     background-color: #555;
     color: white;
+}
+
+.active {
+    background-color: green;
+    color: white;
+}
+
+.dropdown-container {
+    display: none;
+    background-color:#f1f1f1;
+    padding-left: 8px;
+}
+
+.bi-caret-down-fill {
+    float: right;
+    padding-right: 8px;
+}
+
+@media screen and (max-height: 450px){
+    .sidenav {padding-top: 15px}
+    .sidenav a {font-size: 18px}
 }
 
 .container {
