--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -26,36 +26,48 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- End of Bootstrap components -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>
 </head>
 
 <body>
 
 <div id="banner" class="jumbotron text-left">
-    <div id="header-auth">
-        <a id="bt-register" href="/register">Register</a>
-        <button type="button" id="bt-login">Login</button>
-    </div>
+<!--    <div id="header-auth">-->
+<!--        <a id="bt-register" href="/register">Register</a>-->
+<!--        <button type="button" id="bt-login">Login</button>-->
+<!--    </div>-->
 </div>
 
 <div class="container">
     <!--    <div class="card">-->
     <!--        <strong th:text="${category.name}">Category Title</strong>-->
     <!--    </div>-->
-    <div id="navbar">
-        <ul class="my-navbar">
-            <li><a href="#">Products</a></li>
-            <ul><a href="#">Category</a>
-                <button class="w3-button">Category</button>
-                    <li><a href="#" class="w3-bar-item w3-button">Link 1</a></>
-                    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-                    <a href="#" class="w3-bar-item w3-button">Link 3</a>
-            </ul>
-            <li><a href="#">Supplier</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">About</a></li>
-        </ul>
+    <div id="navbar" class="sidenav">
+        <div class="my-navbar">
+            <a href="#">Products</a>
+            <button class="dropdown-btn category">Category
+                <i class="bi bi-caret-down-fill"></i>
+            </button>
+            <div class="dropdown-container">
+                <div th:each="category,iterStat : ${categories}">
+                <div><a th:href="'/Category/' + ${category.name}" th:text="${category.name}"></a></div>
+                </div>
+            </div>
+            <button class="dropdown-btn supplier">Supplier
+                <i class="bi bi-caret-down-fill"></i>
+            </button>
+            <div class="dropdown-container">
+                <div th:each="supplier,iterStat : ${suppliers}">
+                    <div><a th:href="'/Category/' + ${supplier.name}" th:text="${supplier.name}"></a></div>
+                </div>
+            </div>
+            <a href="#">Contact</a>
+            <a href="#">About</a>
+        </div>
     </div>
     <div class="grid-container">
         <div id="products" class="row row-cols-4 row-cols-md-2">
@@ -86,5 +98,6 @@
 <div class="footer">
     <div th:replace="footer.html :: copy"></div>
 </div>
+<script src="static/js/style.js"></script>
 </body>
 </html>
