--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -48,7 +48,7 @@
     <!--    </div>-->
     <div id="navbar" class="sidenav">
         <div class="my-navbar">
-            <a href="#">Products</a>
+            <a href="/">Products</a>
             <button class="dropdown-btn category">Category
                 <i class="bi bi-caret-down-fill"></i>
             </button>
