shopping cart partial&grand total+delete+promo code = done ! quantity not editable !

--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -93,7 +93,12 @@ header {
 
 body {
     background-color: powderblue;
+}
 
+#inner-body{
+    position: absolute;
+    /*margin-left: 5%;*/
+    left: 5%;
 }
 
 .my-navbar{
