--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -25,6 +25,7 @@
     <!-- Latest compiled and minified CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- End of Bootstrap components -->
 
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>
@@ -35,12 +36,12 @@
 
 <div id="banner" class="jumbotron text-right">
     <form action="cart" method="get">
-        <button style="font-size:40px"><i class="fa fa-shopping-cart" ></i></button>
+        <button style="font-size:40px"><i class="fa fa-shopping-cart"></i></button>
     </form>
-<!--    <div id="header-auth">-->
-<!--        <a id="bt-register" href="/register">Register</a>-->
-<!--        <button type="button" id="bt-login">Login</button>-->
-<!--    </div>-->
+    <!--    <div id="header-auth">-->
+    <!--        <a id="bt-register" href="/register">Register</a>-->
+    <!--        <button type="button" id="bt-login">Login</button>-->
+    <!--    </div>-->
 </div>
 
 <div class="container">
@@ -82,17 +83,15 @@
                         <p class="card-text" th:text="${prod.description}">Product description... </p>
                     </div>
                     <div class="card-footer mt-auto">
-                            <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
-                                <a class="btn btn-success" th:attr="href='/index?product=' + ${prod.id}">
-                                    <i class="bi bi-cart4"></i>
-                                </a>
+                        <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
+                        <a class="btn btn-success" th:attr="href='/index?product=' + ${prod.id}">
+                            <i class="bi bi-cart4"></i>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 </div>
 <div class="footer">
     <div th:replace="footer.html :: copy"></div>
