--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -97,8 +97,14 @@
         </div>
 
         <div class="float-right">
-          <button type="button" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
-          <button type="button" class="btn btn-lg btn-primary mt-2">Checkout</button>
+            <form action="/" class="inline">
+                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
+            </form>
+            <form action="checkout" method="get">
+
+                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Checkout</button>
+
+            </form>
         </div>
 
       </div>
