--- a/src/main/webapp/templates/checkout/checkout.html
+++ b/src/main/webapp/templates/checkout/checkout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"></html>
+
 <head>
   <meta charset="UTF-8">
   <title>Check Out</title>
@@ -24,11 +25,11 @@
       </tr>
       <tr>
         <td>Shipping:</td>
-        <td><input type="text" name="shipping" value="10" /></td>
+        <td><input type="text" name="shipping" value="0" /></td>
       </tr>
       <tr>
         <td>Tax:</td>
-        <td><input type="text" name="tax" value="10" /></td>
+        <td><input type="text" name="tax" value="0" /></td>
       </tr>
       <tr>
         <td>Total Amount:</td>
@@ -46,5 +47,7 @@
     </table>
   </form>
 </div>
+<script src="static/js/cart.js"></script>
 </body>
+<script src="static/js/cart.js"></script>
 </html>
