cart buttons on single line and wip

--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -97,14 +97,13 @@
         </div>
 
         <div class="float-right">
-            <form action="/" class="inline">
-                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
-            </form>
-            <form action="checkout" method="get">
-
-                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Checkout</button>
-
-            </form>
+            <button id="back" type="button" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
+<!--            <form action="/" class="inline">-->
+<!--                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>-->
+<!--            </form>-->
+<!--            <form action="checkout" method="get">-->
+                <button id="checkout" type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Checkout</button>
+<!--            </form>-->
         </div>
       </div>
     </div>
