--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -109,6 +109,6 @@
       </div>
     </div>
   </div>
-  <script src="static/js/cart.js"></script>
+  <script src="static/js/cart.js"></script><script src="static/js/checkout.js"></script>
 </body>
 </html>
