before merging adi

--- a/src/main/webapp/templates/checkout/checkout.html
+++ b/src/main/webapp/templates/checkout/checkout.html
@@ -18,7 +18,7 @@
     <table style="height: auto">
       <tr>
         <th>Product/Service:</th>
-        <td th:text="${products}"></td>
+        <td width="200px" style="align-content: end" th:text="${products}"></td>
       </tr>
       <tr>
         <th>Sub Total:</th>
