--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -101,17 +101,16 @@
         </div>
 
         <div class="float-right">
-            <button id="back" type="button" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
-<!--            <form action="/" class="inline">-->
-<!--                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>-->
-<!--            </form>-->
-<!--            <form action="checkout" method="get">-->
+<!--            <button id="back" type="button" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>-->
+            <form action="/" class="inline">
+                <button type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
+            </form>
+            <form action="checkout" method="get">
                 <button id="checkout" type="submit" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Checkout</button>
-<!--            </form>-->
+            </form>
         </div>
       </div>
     </div>
   </div>
-  <script src="static/js/cart.js"></script><script src="static/js/checkout.js"></script>
 </body>
 </html>
