--- a/src/main/webapp/templates/checkout/checkout.html
+++ b/src/main/webapp/templates/checkout/checkout.html
@@ -22,19 +22,19 @@
       </tr>
       <tr>
         <th>Sub Total:</th>
-        <td><input type="text" name="subtotal" th:value="${sum}" disabled></td>
+        <td><input type="text" name="subtotal" th:value="${sum}" ></td>
       </tr>
       <tr>
         <th>Shipping:</th>
-        <td><input  type="text" name="shipping" value="0" disabled></td>
+        <td><input  type="text" name="shipping" value="0" ></td>
       </tr>
       <tr>
         <th>Tax:</th>
-        <td><input type="text" name="tax" value="0" disabled></td>
+        <td><input type="text" name="tax" value="0" ></td>
       </tr>
       <tr>
         <th>Total Amount:</th>
-        <td><input type="text" name="total" th:value="${sum}" disabled></td>
+        <td><input type="text" name="total" th:value="${sum}" ></td>
       </tr>
       <tr>
         <td colspan="2" align="center">
