window.onclick: modal close issue resolved // sout removed in AuthorizePaymentServlet // test prints added in ProductController

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -145,8 +145,8 @@
     <form class="modal-content" action="/action_page.php">
         <div class="container">
             <span class="close" id="xCloseLoginModal" title="Close Modal">&times;</span>
-            <label for="login-username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="login-username" required>
+            <label for="login-email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="login-email" required>
 
             <label for="login-password"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="login-password" required>
