session active , not saving details yet

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -108,7 +108,7 @@
 
 <div id="signUpModal" class="modal">
 
-    <form class="modal-content" action="/action_page.php">
+    <form class="modal-content">
         <div class="container">
             <span class="close" id="xCloseSignupModal" title="Close Modal">&times;</span>
             <h1>Sign Up</h1>
@@ -142,7 +142,7 @@
 
 
 <div id="loginModal" class="modal">
-    <form class="modal-content" action="/action_page.php">
+    <form class="modal-content">
         <div class="container">
             <span class="close" id="xCloseLoginModal" title="Close Modal">&times;</span>
             <label for="login-email"><b>Email</b></label>
@@ -159,7 +159,7 @@
             </label>
             <div class="clearfix">
                 <button id="loginModalCancelBtn" class="cancelbtn">Cancel</button>
-                <button type="button" class="signupbtn">Login</button>
+                <button class="signupbtn" type="submit" value="Login">Login</button>
             </div>
         </div>
     </form>
